# KS_SOLVER_CB

./: CMakeLists.txt
DEVMEMLIB/: CMakeLists.txt  Makefile  device_memcpy_mod.f90  dxlib_errore.f90
FFTXlib/: fft_ggen.mod  fft_param.mod  fft_scalar_arm.mod  fft_scalar_dfti.mod  fft_scalar_essl.mod  fft_scalar_fftw.mod  fft_scalar_fftw3.mod  fft_support.mod  fft_types.mod  fftw_interfaces.mod  scatter_mod.mod  stick_base.mod
FFTXlib/fortuno_tests/: CMakeLists.txt
KS_Solvers/: CMakeLists.txt
LAXlib/: CMakeLists.txt  cdiaghg.f90  descriptors.mod  dspev_module.mod  la_param.mod  mp_diag.mod  parallel_toolkit.mod  rdiaghg.f90  zhpev_module.mod
LAXlib/fortuno_tests/: CMakeLists.txt
cbToy/: CMakeLists.txt  cb_davidson_main.f90  my_h_psi_checker.f90
cbToy/cb_lib/: CMakeLists.txt  cb_module.f90  ggen.f90  init_k.f90  init_random_wfcs.f90  input.f90  mp_bands.f90  mp_global.f90  mp_world.f90  random_numbers.f90  set_cb_potential.f90  sort.f90  write_bands.f90
cbToy/cb_operators/: CMakeLists.txt  cb_g_psi.f90  cb_h_psi.f90
examples_of_routines/: cb_s_psi.f90  my_h_psi.f90  my_h_psi_wrapper.f90
